@@ -17,7 +17,7 @@
     <parent>
         <groupId>com.orientechnologies</groupId>
         <artifactId>orientdb-parent</artifactId>
-        <version>3.2.2-SNAPSHOT</version>
+        <version>3.2.3-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
 
@@ -29,8 +29,6 @@
         <VERSION>${project.version}</VERSION>
         <BUILD>${implementation.build}; ${maven.build.timestamp}</BUILD>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <argLine>-Xmx${heapSize} -Xms${heapSize} -XX:MaxDirectMemorySize=512g -Dstorage.diskCache.bufferSize=4096</argLine>
-        <project.rootdir>${project.basedir}/../</project.rootdir>
     </properties>
 
     <dependencies>
@@ -183,6 +181,32 @@
     </build>
 
     <profiles>
+        <profile>
+            <id>java8</id>
+            <activation>
+                <jdk>1.8</jdk>
+            </activation>
+            <properties>
+                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+                <argLine>-Xmx${heapSize} -Xms${heapSize} -XX:MaxDirectMemorySize=512g
+                    -Dstorage.diskCache.bufferSize=4096
+                </argLine>
+            </properties>
+        </profile>
+        <profile>
+            <id>java11</id>
+            <activation>
+                <jdk>[11,)</jdk>
+            </activation>
+            <properties>
+                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+                <argLine>-Xmx${heapSize} -Xms${heapSize} -XX:MaxDirectMemorySize=512g
+                    -Dstorage.diskCache.bufferSize=4096
+                    --add-opens jdk.unsupported/sun.misc=ALL-UNNAMED --add-opens java.base/sun.security.x509=ALL-UNNAMED
+                </argLine>
+            </properties>
+        </profile>
+
         <profile>
             <id>qa</id>
             <build>
